# OOP_5

./: AppClass.cpp  AppClass.h  CMakeLists.txt  InputClass.cpp  InputClass.h  InputHandler.cpp  InputHandler.h  ObjectsClass.cpp  ObjectsClass.h  Operator.cpp  Operator.h  OperatorClass.cpp  OperatorClass.h  OutputClass.cpp  OutputClass.h  OutputHandler.cpp  OutputHandler.h  Pager.cpp  Pager.h  PagerClass.cpp  PagerClass.h  README.md  System.cpp  System.h  TreeNode.cpp  TreeNode.h  main.cpp  outputs.txt  tests_and_results.txt
