cmake_minimum_required(VERSION 3.25)
project(OOP_5_Copied)

set(CMAKE_CXX_STANDARD 23)

add_executable(OOP_5_Copied main.cpp InputClass.cpp InputClass.h OperatorClass.cpp OperatorClass.h OutputClass.cpp OutputClass.h PagerClass.cpp PagerClass.h AppClass.cpp AppClass.h ObjectsClass.cpp ObjectsClass.h)
